External links open new tab, change 'page loading' spinner

--- a/src/client/app/about/about.html
+++ b/src/client/app/about/about.html
@@ -10,8 +10,8 @@
   <div class="whoAreWeDesc">
     We are four passionate engineers who strive to create meaningful and innovative applications. GitSpy was fueled by our desire to optimize the Git workflow while also giving back to the open source community. Learn more about an individual team member by clicking on their photo!
   </div>
-    <div target-tab>
-      <div class="aboutPhotoTable">
+    <div>
+      <div target-tab class="aboutPhotoTable">
         <table class="table">
           <tr>
             <td><a href="https://github.com/alberthuynh91"><img src="https://c2.staticflickr.com/2/1684/25695479930_f9de871708_q.jpg" title="Yo!"></a></td>
@@ -32,7 +32,7 @@
       <div class="contactDesc">
         <table class="contactTable">
           <tr>
-            <td><a href="https://github.com/AudibleBoulders/AudibleBoulders"><span class="fa fa-github-alt"></span></a></td>
+            <td target-tab><a href="https://github.com/AudibleBoulders/AudibleBoulders"><span class="fa fa-github-alt"></span></a></td>
             <td><a href="mailto:gitSpyApp@gmail.com"><span class="glyphicon glyphicon-envelope"></span></a></td>
           </tr>
           <tr>
