--- a/src/client/app/add/add.html
+++ b/src/client/app/add/add.html
@@ -15,7 +15,7 @@
   </div>
 
   <div ng-show="loading" class="spinner">
-    <img src="https://d13yacurqjgara.cloudfront.net/users/82092/screenshots/1073359/spinner.gif">
+    <i class="fa fa-circle-o-notch fa-4x fa-spin"></i>
   </div>
 
   <table class="table tablecss table-hover">
