--- a/src/client/app/about/about.html
+++ b/src/client/app/about/about.html
@@ -19,10 +19,10 @@
           <td><a href="https://github.com/Rhombus33"><img src="https://c2.staticflickr.com/2/1451/25875249232_6b0e6342a8_q.jpg"></a></td>
         </tr>
         <tr>
-          <td><a href="https://github.com/alberthuynh91">Ross</a></td>
-          <td><a href="https://github.com/yaliceme">Albert</a></td>
-          <td><a href="https://github.com/Rhombus33">Alice</a></td>
-          <td><a href="https://github.com/RossAD">Diamond</a></td>
+          <td><a href="https://github.com/RossAD">Ross</a></td>
+          <td><a href="https://github.com/alberthuynh91">Albert</a></td>
+          <td><a href="https://github.com/yaliceme">Alice</a></td>
+          <td><a href="https://github.com/Rhombus33">Diamond</a></td>
         </tr>
       </table>
     </div>
