--- a/src/client/app/dashboard/dashboard.html
+++ b/src/client/app/dashboard/dashboard.html
@@ -38,9 +38,16 @@
     <div class="dashboardUser" ng-repeat="user in users">
       <div ng-class="[users, { upToDate: user.last_pulled_commit_sha1 === dashboard.last_commit_sha1, outOfDate: user.last_pulled_commit_sha1 !== dashboard.last_commit_sha1, notSetUp: user.set_up === 0 }]">
         <div class="dashboardUserCommit">
-          <div ng-show="user.last_pulled_commit_sha1 === dashboard.last_commit_sha1" class="status"><span class="glyphicon glyphicon-ok-sign"></span> {{user.github_name}} has pulled {{dashboard.last_commit_sha1}}</div>
-          <div ng-show="user.last_pulled_commit_sha1 !== dashboard.last_commit_sha1 && user.set_up" class="status"><span class="glyphicon glyphicon-exclamation-sign"></span> {{user.github_name}} needs to git pull</div>
-          <div ng-show="!user.set_up" class="status"><span class="glyphicon glyphicon-exclamation-sign"></span> {{user.github_name}} needs to set up</div>
+          <div ng-show="user.last_pulled_commit_sha1 === dashboard.last_commit_sha1" class="status">
+            <span class="glyphicon glyphicon-ok-sign"></span> {{user.github_name}} has pulled {{dashboard.last_commit_sha1}}
+          </div>
+          <div ng-show="user.last_pulled_commit_sha1 !== dashboard.last_commit_sha1 && user.set_up" class="status">
+            <span class="glyphicon glyphicon-exclamation-sign"></span> {{user.github_name}} needs to git pull
+            <br>Last pull: {{user.last_pulled_commit_msg}}
+          </div>
+          <div ng-show="!user.set_up" class="status">
+            <span class="glyphicon glyphicon-exclamation-sign"></span> {{user.github_name}} needs to set up
+          </div>
         </div>
 
         <div class="dashboardUserInfo">
