--- a/src/client/index.html
+++ b/src/client/index.html
@@ -28,6 +28,7 @@
               </button>
               <a class="navbar-brand" href="#/"><img src="https://c2.staticflickr.com/2/1564/25950557116_5baa0648ef_s.jpg"></a>
             </div>
+            <div class="loggedIn" ng-show="!isActivePage('/login')"><span>Welcome {{user}}!</span></div>
             <div class="collapse navbar-collapse" id="myNavbar">
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="#/"><span class="fa fa-home"></span>  Home</a></li>
