Minor tweaks to index.html and login.js

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -27,7 +27,7 @@
                 <span class="icon-bar"></span>
               </button>
               <a class="navbar-brand" href="#/"><img src="https://c2.staticflickr.com/2/1564/25950557116_5baa0648ef_s.jpg"></a>
-              <div class="loggedIn" ng-show="!isActivePage('/login')"><span>Welcome {{user}}!</span></div>
+              <div class="loggedIn" ng-show="!isActivePage('/login')"><span>Welcome, {{user}}!</span></div>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
               <ul class="nav navbar-nav navbar-right">
