--- a/src/client/index.html
+++ b/src/client/index.html
@@ -17,7 +17,7 @@
   <body>
     <!-- Nav Bar -->
     <header>
-      <div ng-controller="LoginController">
+      <div ng-controller="LoginController" >
         <nav class="navbar navbar-light" ng-hide="isActivePage('/login')">
           <div class="container-fluid">
             <div class="navbar-header">
@@ -27,7 +27,7 @@
                 <span class="icon-bar"></span>
               </button>
               <a class="navbar-brand" href="#/"><img src="https://c2.staticflickr.com/2/1564/25950557116_5baa0648ef_s.jpg"></a>
-              <div class="loggedIn" ng-show="!isActivePage('/login')"><span>Welcome, {{user}}!</span></div>
+              <div class="loggedIn" ng-bind-html="welcomeString"></div>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
               <ul class="nav navbar-nav navbar-right">
@@ -50,13 +50,14 @@
     <script src="https://code.angularjs.org/1.5.0-rc.2/angular-mocks.js"></script>
     <script src="https://code.angularjs.org/1.5.0-rc.2/angular-cookies.min.js"></script>
     <script src="https://code.angularjs.org/1.5.0-rc.2/angular-animate.min.js"></script>
+    <script src="https://code.angularjs.org/1.5.0-rc.2/angular-sanitize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
     <script src="lib/angular-socket-io/socket.js"></script>
 
     <!-- Angular Modules -->
-    <script src="app/services/services.js"></script>
     <script src="app/login/login.js"></script>
+    <script src="app/services/services.js"></script>
     <script src="app/logout/logout.js"></script>
     <script src="app/home/home.js"></script>
     <script src="app/add/add.js"></script>
