Add bolding and links to about text modified:   src/client/app/about/about.html modified:   src/client/styles/style.css

--- a/src/client/app/about/about.html
+++ b/src/client/app/about/about.html
@@ -16,25 +16,25 @@
     <br>
     <br>
     <ul>
-      <li> Your team has a shared public repo whose master branch acts as your project’s “source of truth.” All teammates have at least collaborator permissions on the repo. </li>
+      <li> Your team has a shared <span class="bold">public repo</span> whose <span class="bold">master branch</span> acts as your project’s “source of truth.” All teammates have at least <span class="bold">collaborator</span> permissions on the repo. </li>
       <br>
-      <li> Collaborators git pull --rebase to get the latest code from this “source of truth.” GitSpy currently only works with a [rebase-based workflow](https://www.atlassian.com/git/tutorials/merging-vs-rebasing/conceptual-overview).</li>
+      <li> Collaborators <span class="bold">git pull --rebase</span> to get the latest code from this “source of truth.” GitSpy currently <span class="bold">only works</span> with a <a target-tab href="https://www.atlassian.com/git/tutorials/merging-vs-rebasing/conceptual-overview">rebase-based workflow</a>.</li>
       <br>
-      <li>New changes are incorporated into the “source of truth” repo via pull requests, i.e. code is never directly pushed to the team repo master branch. When pull requests are merged, the commit message always begins with “Merge pull request #[....]” </li>
+      <li>New changes are incorporated into the “source of truth” repo via <span class="bold">pull requests</span>, i.e. code is <span class="bold">never</span> directly pushed to the team repo master branch. When pull requests are merged, the commit message always begins with “Merge pull request #[....]” </li>
     </ul>
     <br>
-    To use GitSpy effectively, it’s very important that your team’s workflow conforms with these assumptions. If you would like to see support for other workflows, feel free to [send us your feedback](mailto).
+    To use GitSpy effectively, it’s very important that your team’s workflow conforms with these assumptions. If you would like to see support for other workflows, feel free to <a href="mailto:gitSpyApp@gmail.com">send us your feedback</a>.
   </div>
 
   <div class="aboutSubTitles">How do I get started with GitSpy?</div>
   <div class="missionDesc">
-    Step One: Login with GitHub. On the “Authorize application” page, be sure there are green checkmarks next to any organizations/teams whose repos you want to use GitSpy with.
+    <span class="bold">Step One:</span> <a href="http://gitspy.com/login/github">Login with GitHub</a>. On the “Authorize application” page, be sure there are green checkmarks next to any organizations/teams whose repos you want to use GitSpy with.
     <br><br>
-    Step two: [Add a GitSpy dashboard]() for your team repo. Be sure to select your team’s shared “source of truth” repo, NOT your individual GitHub fork of this repo.
+    <span class="bold">Step two:</span> <a href="http://gitspy.com/#/add">Add a GitSpy dashboard</a> for your team repo. Be sure to select your team’s shared “source of truth” repo, NOT your individual GitHub fork of this repo.
     <br><br>
-    Step three: From the new dashboard page, click “setup instructions.” Follow the instructions to start reporting your local file activity to GitSpy. This setup only needs to be run once per person per dashboard.
+    <span class="bold">Step three:</span> From the new dashboard page, click “setup instructions.” Follow the instructions to start reporting your local file activity to GitSpy. This setup only needs to be run once per person per dashboard.
     <br><br>
-    Step four: Ask all your teammates to set up GitSpy, so you can see their activity on your GitSpy dashboard!
+    <span class="bold">Step four:</span> Ask all your teammates to set up GitSpy, so you can see their activity on your GitSpy dashboard!
   </div>
 
   <div class="aboutSubTitles">Who built GitSpy?</div>
