Text tweak 	modified:   src/client/app/about/about.html

--- a/src/client/app/about/about.html
+++ b/src/client/app/about/about.html
@@ -20,7 +20,7 @@
       <br>
       <li> Collaborators <span class="bold">git pull --rebase</span> to get the latest code from this “source of truth.” GitSpy currently <span class="bold">only works</span> with a <a target-tab href="https://www.atlassian.com/git/tutorials/merging-vs-rebasing/conceptual-overview">rebase-based workflow</a>.</li>
       <br>
-      <li>New changes are incorporated into the “source of truth” repo via <span class="bold">pull requests</span>, i.e. code is <span class="bold">never</span> directly pushed to the team repo master branch. When pull requests are merged, the commit message always begins with “Merge pull request #[....]” </li>
+      <li>New changes are <span class="bold">always</span> incorporated into the “source of truth” repo by merging a <span class="bold">pull request</span>. Code is <span class="bold">never</span> directly pushed to the team repo master branch.</li>
     </ul>
     <br>
     To use GitSpy effectively, it’s very important that your team’s workflow conforms with these assumptions. If you would like to see support for other workflows, feel free to <a href="mailto:gitSpyApp@gmail.com">send us your feedback</a>.
