Landing page tweaks

--- a/src/client/app/login/login.html
+++ b/src/client/app/login/login.html
@@ -2,14 +2,14 @@
   <img src="https://c2.staticflickr.com/2/1476/25342880284_b01b8ace11_o.jpg">
 </div>
 <p class="tagLine">"Hey, what files are you touching?"</p>
-<p class="mission">GitSpy gives your developer team a real-time view of what everyone is working on, before they've even pushed their work to GitHub.  Communicate better and anticipate merge conflicts before the happen.</p>
+<p class="mission">GitSpy gives your developer team a real-time view of what everyone is working on, before they've even pushed their work to GitHub.  Communicate better and anticipate merge conflicts before they happen.</p>
 <div class="loginBtn">
   <a class="btn btn-block btn-social btn-github" href="login/github">
     <span class="fa fa-github"></span> Sign in with GitHub
   </a>
 </div>
 <div class="learnMore">
-  <a href="/learnMore">
+  <a href="#/learn-more">
     <span>Learn More</span>
   </a>
 </div>
