--- a/src/client/app/setup/setup.html
+++ b/src/client/app/setup/setup.html
@@ -4,16 +4,18 @@
   </div>
 
   <div class="setupBody">
+    Run these instructions once to start tracking your local activity on the {{orgName + '/' + repoName}} GitSpy dashboard. (If you have multiple GitSpy dashboards, you will need to run these instructions once per repo.)
+  </div>
+
+  <div class="setupBody">
       <div><b>1)</b> Download, unzip, and move the
       <strong><a href="/gitSpy.zip" download="gitSpy">gitSpy</a></strong>
       folder into the root directory of your local {{orgName + '/' + repoName}} repository</div>
-      <div><b>2)</b> In your terminal, run the command "<strong>node gitSpy/gitSpyInit.js</strong>" from your project's root folder.</br>This will add GitSpy post-commit hooks to your repo.</div>
-      <div><b>3)</b> Add "<strong>gitSpy/*</strong>" to your .gitignore file to avoid pushing your private GitSpy keys to GitHub</div>
-      <div><b>4)</b> Replace the placeholder text in the SIGNATURE_HASH.js file with the one below
+      <div><b>2)</b> In your terminal, run the command `<strong>node gitSpy/gitSpyInit.js</strong>` from your project's root folder.</br>This will add GitSpy post-commit hooks to your repo, enable a `spyUpdate` terminal command, and add gitSpy/* to your .gitignore file.</div>
+      <div><b>3)</b> Replace the placeholder text in the SIGNATURE_HASH.js file with the one below. This signature hash will be different for each of your GitSpy dashboards:
         <ul><strong>signature_hash</strong>: "{{signature_hash}}"</ul>
       </div>
-      <div><b>5)</b> Make a commit to start tracking your local file changes on GitSpy</div>
-      <div><b>6)</b> You are now setup with GitSpy!</div>
+      <div><b>4)</b> You are now set up with GitSpy! GitSpy will be updated any time you commit or run the `spyUpdate` command.</div>
   </div>
 
 </div>
