improve landing page for mobile

--- a/src/client/app/about/learn-more.html
+++ b/src/client/app/about/learn-more.html
@@ -57,6 +57,12 @@
         </tr>
       </table>
     </div>
+    
+    <div class="loginBtn">
+        <a class="btn btn-block btn-social btn-github" href="login/github">
+            <span class="fa fa-github"></span> Sign in with GitHub
+        </a>
+    </div>
 
     <div class="aboutSubTitles">Contact Us</div>
     <div class="contactDesc">
