Edit setup instructions to not require fs anymore 	modified:   src/client/app/dashboard/dashboard.html 	modified:   src/client/app/dashboard/dashboard.js 	modified:   src/client/app/setup/setup.html

--- a/src/client/app/dashboard/dashboard.html
+++ b/src/client/app/dashboard/dashboard.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="dashboardSetupBtn">
-      <a href="#/{{orgName}}/{{repoName}}/setup"><button type="button" class="btn btn-info btn-sm">Setup instructions</button></a>
+      <a href="#/{{orgName}}/{{repoName}}/setup"><button type="button" class="btn btn-info btn-sm">Setup instructions for {{loggedInUser}}</button></a>
     </div>
 
     <div class="lastCommit">
