Tweak wording on about page modified:   src/client/app/about/about.html modified:   src/client/app/about/learn-more.html

--- a/src/client/app/about/learn-more.html
+++ b/src/client/app/about/learn-more.html
@@ -3,7 +3,7 @@
 
   <div class="aboutSubTitles">What is GitSpy?</div>
   <div class="missionDesc">
-    GitSpy is a free passive-communication tool for fast-moving software development teams. It gives you a real-time view of what your developer teammates are working on locally, and what files they are affecting.
+    GitSpy is a free passive-communication tool for fast-moving software development teams. It gives you a real-time view of what your developer teammates are working on, and what files they are affecting locally.
     <br><br>
     Just login, add your team’s shared project repo, and run the GitSpy setup instructions on your local computer. Once everyone on your team has done that, you’ll have a shared dashboard that shows each developer’s status &mdash; their most recent rebase, and what files they’ve touched since. Your status will update immediately upon commit &mdash; you don’t even have to push to GitHub first!
     <br><br>
@@ -57,7 +57,7 @@
         </tr>
       </table>
     </div>
-    
+
     <div class="loginBtn">
         <a class="btn btn-block btn-social btn-github" href="login/github">
             <span class="fa fa-github"></span> Sign in with GitHub
