--- a/src/client/index.html
+++ b/src/client/index.html
@@ -17,8 +17,8 @@
   <body>
     <!-- Nav Bar -->
     <header>
-      <div ng-controller="LoginController" >
-        <nav class="navbar navbar-light" ng-hide="isActivePage('/login') || isActivePage('/learn-more')">
+      <div ng-controller="LoginController" ng-cloak ng-hide="isActivePage('/login') || isActivePage('/learn-more')">
+        <nav class="navbar navbar-light ng-cloak">
           <div class="container-fluid">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
