Clean up CSS, updated media queries

--- a/src/client/app/login/login.html
+++ b/src/client/app/login/login.html
@@ -14,6 +14,6 @@
 </div>
 <div class="learnMore">
   <a href="#/learn-more">
-    <span>Learn More</span>
+    <div>Learn More</div>
   </a>
 </div>
